// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid/> debe de mostrar items cuando se cargan imagenes con useFetchGifs 1`] = `
<div>
  <h3
    className="animate__animated animate__fadeIn "
  >
    Pokemon
  </h3>
  <ol
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Imagen de Prueba"
      url="https://google.com"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Imagen de Prueba"
      url="https://google.com"
    />
  </ol>
</div>
`;

exports[`Pruebas en <GifGrid/> debe mostrarse correctamente 1`] = `
<div>
  <h3
    className="animate__animated animate__fadeIn "
  >
    Pokemon
  </h3>
  <p
    className="animate__animated animate__flash animate__infinite"
  >
    Cargando...
  </p>
  <ol
    className="card-grid"
  />
</div>
`;
